(FE - Footer): No longer need to scroll to see sticky footer on small pages

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -4,66 +4,3 @@
   // font-family:  Arial, Helvetica, sans-serif;
   background: #FFFFFF;
 }
-
-
-// Top-level container for entire webapp
-.cw-app-container {
-  width: 100%;
-  height: 100%;
-
-  background-color: #181716;
-
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: stretch;
-  align-content: center;
-
-  // Common container for served webpages
-  .cw-common-page-container {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: center;
-    align-content: center;
-
-    // Makes background grow to fit components
-    overflow: auto;
-    color: white;
-
-    .cw-common-content-container {
-
-      display: flex;
-      flex-direction: row;
-      flex-wrap: nowrap;
-      justify-content: center;
-      align-items: center;
-      align-content: center;
-
-      .yt-video {
-      }
-
-      .cw-common-content-title {
-        font-size: 4rem;
-        // margin-bottom: 4rem;
-        font-weight: 900;
-        color: black;
-        border-bottom: 5px solid black;
-      }
-
-      .content {
-        // padding-right: 50px;
-        // padding-bottom: 5px;
-
-        color: blue;
-        .cw-common-link {
-            text-decoration: none;
-            color: #ff0000;
-            // min-height: 100vh;
-        }
-      }
-    }
-  }
-}
