--- a/frontend/src/cw-common/components/footer/cw-footer.scss
+++ b/frontend/src/cw-common/components/footer/cw-footer.scss
@@ -2,14 +2,8 @@
   height: 3rem;
   width: 100%;
 
-  // top: 100%;
-  // right: 2em;
-  // padding-top: 3em;
+  margin-top: auto;
 
-  // position: relative;
-  padding: 0.5rem 0rem;
-  // background: linear-gradient(#393433, #2a2727);
-  // background: linear-gradient(#453f3d, #2a2727);
   background: linear-gradient(360deg, rgb(241, 242, 11) 0.00%, rgb(248, 161, 27) 100.00%);
   color: black;
   box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
@@ -25,7 +19,7 @@
   .social-icon {
       padding-left: 2em;
       padding-right: 2em;
-      margin-top: 5px;
+      margin-top: 13px;
       color: #8b0000;
   }
 }
